# text-adventure

./: .gitignore  .pre-commit-config.yaml  README.md  Session.vim  TODO  dungeon.py  entity.py  main.py  pyproject.toml  requirements.txt  room.py  text-adventure.md
assets/: bestiary.yaml  rooms.json
core/: actions.py  dungeon.py  engine.py  loader.py  room.py  shortcuts.py  validation.py  world.py
core/actions/: __init__.py  action_group.py  attack.py  base_action.py  classes.py  exception.py  functions.py  menu_action.py  open.py  quit.py
core/actions/list/: attack.py  quit.py
core/actions/menu/: multi_select_action.py  quantity_select.py  quit_action.py  select_action.py  select_all_action.py  unselect_all_action.py  validate_action.py
core/containers/: container.py  inventory.py  ncp_slot.py  npc_slot.py  sized_container.py  slot.py
core/controllers/: __init__.py  action_manager.py  controller.py  parser.py  room_controller.py  scene_controller.py  selection_controller.py
core/engine/: commands.py  engine.py  functions.py  parser.py  prompt.py
core/entities/: __init__.py  character.py  classes.py  describable.py  entity.py  npc.py  player.py  trader.py
core/fight/: equipments.py  fighter.py  statistics.py
core/generation/: room.py
core/items/: armor.py  equipable.py  item.py  potion.py  weapon.py
core/parser/: action.py  parser.py
core/utils/: armory.py  armoury.py  bestiary.py  strings.py
core/views/: __init__.py  message.py  message_view.py  room_view.py  scenery.py  view.py
data/: bestiary.yaml  items.yaml
(+25 files in other folders)
