[tool.poetry]
name = "text-adventure"
version = "0.1.0"
description = "A text-based roguelike including dungeons, monsters and magic 🎉"
authors = ["alexis-moins <moinsalexis@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
